<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    android:paddingTop="40dp"

    tools:context=".view.Registration">
    <TextView

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/money_wallet"
        android:id="@+id/title"
        android:layout_margin="5dp"
        android:gravity="center"

        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
        android:textSize="40dp"
        style="@style/Regular"
        android:paddingBottom="40dp"
        />

    <android.support.design.widget.TextInputLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <android.support.design.widget.TextInputEditText

        android:id="@+id/customerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/accountNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/accountNo"
        android:inputType="text"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/pin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin"
        android:inputType="number"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/confirm_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pin"
        android:inputType="number"
        />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegistration"
        android:text="@string/registration"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:background="@drawable/circular_button"
        android:textColor="@android:color/white"
        />
    <TextView
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Already have an account?Login here"
        android:id="@+id/loginLink"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="16dp"
       />
<!--    <Button-->


<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/btnLogin"-->
<!--        android:text="@string/login"-->
<!--        android:layout_margin="5dp"-->
<!--        android:textStyle="bold"-->
<!--        android:background="@drawable/circular_button"-->
<!--        android:textColor="@android:color/white"-->

        />
</LinearLayout>

